--- a/overlay/frameworks/base/packages/SettingsProvider/res/values/defaults.xml
+++ b/overlay/frameworks/base/packages/SettingsProvider/res/values/defaults.xml
@@ -34,9 +34,12 @@
     <bool name="def_dtmf_tones_enabled">false</bool>
 
     <!-- Disable screen locking sounds by default -->
-    <integer name="def_lockscreen_sounds_enabled">0</integer>
+    <integer name="def_lockscreen_sounds_enabled">1</integer>
 
     <!-- Enable vibrate for calls by default -->
     <bool name="def_vibrate_when_ringing">true</bool>
+
+    <!-- Enable UI touch haptic feedback by default -->
+    <bool name="def_haptic_feedback">true</bool>
 
 </resources>
