--- a/overlay/packages/apps/Settings/res/values/config.xml
+++ b/overlay/packages/apps/Settings/res/values/config.xml
@@ -33,4 +33,6 @@
        have distinct intensity levels -->
   <bool name="config_vibration_supports_multiple_intensities">true</bool>
 
+    <!-- Whether SELinux status should be shown or not. -->
+    <bool name="config_show_selinux_status">true</bool>
 </resources>
